--- a/server/public/main.css
+++ b/server/public/main.css
@@ -17,6 +17,55 @@ html, body, #app {
     background-size: cover;
 }
 
+
+.waiting-container {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  min-height: 804px;
+  z-index: 1000;
+  overflow: auto;
+}
+
+.waiting-spinning {
+  width: 240px;
+  height: 330px;
+  margin-top: 200px;
+  animation: bounce 1s infinite alternate;
+  -webkit-animation: bounce 1s infinite alternate;
+  /* -webkit-animation-name: pulse;
+  animation-name: pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  backface-visibility: hidden;
+  perspective: 1000px; */
+  /* -webkit-animation:spin 5s linear infinite;
+  -moz-animation:spin 5s linear infinite;
+  animation:spin 5s linear infinite; */
+}
+
+@keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-15px);
+  }
+}
+@-webkit-keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-15px);
+  }
+}
+
+@-moz-keyframes spin { 70% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 70% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
 .body-container {
     display: flex;
     flex-direction: row;
@@ -24,12 +73,12 @@ html, body, #app {
 }
 
 .card-container {
-    margin-left: 300px;
+    margin-left: 20%;
     margin-right: auto;
     padding-right: 100px;
     margin-top: 80px;
     position: relative; 
-    width: 700px;
+    width: 72%;
     height: 500px;
     overflow: hidden;
     display: flex;
@@ -44,6 +93,20 @@ html, body, #app {
     box-shadow: 6px 6px 6px rgba(0,0,0,0.6);
     opacity: 0.9;
     margin: 20px;
+    border-radius: 14px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.postcard {
+  width: 100%;
+  min-width: 50%;
+  height: 420px;
+  box-shadow: 6px 6px 6px rgba(0,0,0,0.6);
+  opacity: 0.9;
+  margin: 20px;
+  border-radius: 14px;
+  border: .5px solid;
 }
 
 .quote-container {
@@ -181,15 +244,18 @@ html, body, #app {
 
 .info-everything {
   margin-top: 5px;
+  left: 0;
 }
 
 .info-container {
-  width: 280px;
+  width: 80%;
   height: 418px;
-  left: 0;
+
   border-top: 1px solid black;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
+  margin-right: auto;
+
 }
 
 .info-content {
@@ -270,3 +336,4 @@ html, body, #app {
   height: 70px;
   margin-left: 8px;
 }
+
