--- a/server/public/main.css
+++ b/server/public/main.css
@@ -417,7 +417,6 @@ b {
 .feels-like-text {
   font-family: Helvetica,  Arial,  sans-serif;
   font-size: 12px;
-
 }
 
 .feels-like {
@@ -427,9 +426,27 @@ b {
   height: 12px;
 }
 
+.icon-container {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+}
+
 .icon {
   width: 70px;
   height: 70px;
   margin-left: 8px;
+}
+
+.humidity-text {
+  font-family: Helvetica,  Arial,  sans-serif;
+  font-size: 12px;
+  margin-left: 22.5%;
+  margin-top: 10px;
+}
+
+.humidity {
+  margin-top: 4px;
 }
 
