--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,9 +1,13 @@
 html, body, #app {
     min-width: 100%;
-    height: 100%;
     margin: 0;
-    z-index: 4;
-    overflow: hidden;
+    /* z-index: 4;
+    /* position:relative;  */
+    padding:0;
+    overflow:hidden;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
 }
 
 .app-container {
@@ -270,11 +274,10 @@ b.p-small {
 
 .header-container {
     width: 100%;
-    height: 242px;
+    height: 160px;
     background-color: #9E9EF3;
     opacity: 0.9;
     background-image: linear-gradient(#9E9EF3, #fffef9);
-
 }
 
 .header {
@@ -394,11 +397,16 @@ a:hover {
     display: flex;
     align-content: center;
     justify-content: center;
-    bottom: 0;
-    position: absolute;
+    bottom: -35px;
     padding: 25px;
-    background-color: #fffef9
+    background-color: #fffef9;
+    /* clear: both; */
+    position: absolute;
+    height: 3em;
+    margin-top: -3em;
+    /* position: relative; */
 }
+
 
 .footer-text {
     color:  #9E9EF3;
