removed percent margins;

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -522,7 +522,7 @@ a:hover {
   font-family: Helvetica,  Arial,  sans-serif;
   font-size: 12px;
   margin-top: 10px;
-  margin-left: 14.5%;
+  margin-left: 18px;
 }
 
 .humidity {
