--- a/server/public/main.css
+++ b/server/public/main.css
@@ -560,7 +560,7 @@ b.info-bold {
   width: 30px;
   height: 30px;
   border-radius: 80%;
-  background-color: #9090b3;
+  background-color:#cfcfee;
   /* margin: 50px; */
   cursor: pointer;
   margin-top: 70px;
