--- a/server/public/main.css
+++ b/server/public/main.css
@@ -272,11 +272,11 @@ b.p-small {
 }
 
 .header-container {
-    width: 100%;
-    height: 160px;
-    background-color: #9E9EF3;
-    opacity: 0.9;
-    background-image: linear-gradient(#9E9EF3, #fffef9);
+  width: 100%;
+  height: 160px;
+  background-color: #D2D2F7;
+  opacity: 0.9;
+  background-image: linear-gradient(#9E9EF3, #9E9EF3, #D2D2F7,#fffef9 );
 }
 
 .header {
