--- a/server/public/main.css
+++ b/server/public/main.css
@@ -8,6 +8,7 @@ html, body, #app {
     flex-direction: column;
     overflow-y: scroll;
     overflow-x: hidden;
+    background-color: #fffef9;
 }
 
 .app-container {
