--- a/server/public/main.css
+++ b/server/public/main.css
@@ -651,7 +651,10 @@ b.inspo-bold, .inspo {
 .about-container {
   font-family: 'Open Sans', sans-serif;
   font-size: 38px;
+  text-align: justify;
+  font-style: italic;
   margin-left: 15%;
   margin-right: 15%;
   margin-top: 20%;
+  color: #a7a7f5;
 }
